--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           <p>
             <i class="devicon-react-original-wordmark"></i> <i class="devicon-javascript-plain"></i>
             <i class="devicon-html5-plain-wordmark"></i> <i class="devicon-css3-plain-wordmark"></i>
-             <i class="devicon-express-original-wordmark"></i> <i class="devicon-mocha-plain"></i>
-             <i class="devicon-mongodb-plain-wordmark"></i> <i class="devicon-nodejs-plain-wordmark"></i>
+             <i class="devicon-express-original"></i> <i class="devicon-mocha-plain"></i>
+             <i class="devicon-mongodb-plain-wordmark"></i> <i class="devicon-nodejs-plain"></i>
           </p>
         </div>
       </div>
@@ -81,8 +81,8 @@
         <div class="tech">
           <p>
             <i class="devicon-html5-plain-wordmark"></i> <i class="devicon-css3-plain-wordmark"></i>
-             <i class="devicon-javascript-plain"></i> <i class="devicon-jquery-plain-wordmark"></i> <i class="devicon-express-original-wordmark"></i>
-             <i class="devicon-nodejs-plain-wordmark"></i> <i class="devicon-mocha-plain"></i> <i class="devicon-mongodb-plain-wordmark"></i>
+             <i class="devicon-javascript-plain"></i> <i class="devicon-jquery-plain-wordmark"></i> <i class="devicon-express-original"></i>
+             <i class="devicon-nodejs-plain"></i> <i class="devicon-mocha-plain"></i> <i class="devicon-mongodb-plain-wordmark"></i>
           </p>
         </div>
       </div>
@@ -104,7 +104,7 @@
         </div>
         <div class="tech">
           <p>
-            <i class="devicon-html5-plain-wordmark"></i> <i class="devicon-css3-plain-wordmark"></i> <i class="devicon-javascript-plain"></i> <i class="devicon-jquery-plain-wordmark"></i> <i class="devicon-nodejs-plain-wordmark"></i>
+            <i class="devicon-html5-plain-wordmark"></i> <i class="devicon-css3-plain-wordmark"></i> <i class="devicon-javascript-plain"></i> <i class="devicon-jquery-plain-wordmark"></i> <i class="devicon-nodejs-plain"></i>
           </p>
         </div>
       </div>
