fixed typo/added demo credentials

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="infoBox">
           <div class="description">
             <h3 class="projectTitle">Bestow</h3>
-            <p class="pProject">Bestow was created to help you keep track of all of the things that you have borrowed or lent to friends or family. The app includes a bright and simple interface and easy to use features.</p>
+            <p class="pProject">Bestow was created to help you keep track of all of the things that you have borrowed or lent to friends or family. The app includes a bright and simple interface and easy to use features. To try a demo, use 'demo' for the username and 'demopass' for the password.</p>
           </div>
         <div class="links">
           <p>
@@ -70,7 +70,7 @@
       <div class="infoBox">
           <div class="description">
             <h3 class="projectTitle">The Game Room</h3>
-            <p class="pProject">The Game Room is a retro styled Blog for video games. Write reviews, share tips and tricks, or just express your love for video games. </p>
+            <p class="pProject">The Game Room is a retro styled Blog for video games. Write reviews, share tips and tricks, or just express your love for video games. To try a demo, use 'demo' for the username and 'demopass' for the password.</p>
           </div>
         <div class="links">
           <p>
@@ -94,7 +94,7 @@
       <div class="infoBox">
           <div class="description">
             <h3 class="projectTitle">SmarterNews</h3>
-            <p class="pProject">SmarterNews is a news app that gives you more. You can view top news stories or search for the news you want to see. It also includes a built in Dictionary and Wikipedia search feaure.</p>
+            <p class="pProject">SmarterNews is a news app that gives you more. You can view top news stories or search for the news you want to see. It also includes a built in Dictionary and Wikipedia search feature.</p>
           </div>
         <div class="links">
           <p>
