--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="infoBox">
             <div class="description">
               <h3 class="projectTitle">Bestow</h3>
-              <p class="pProject">Bestow was created to help you keep track of all of the things that you have borrowed or lent to friends or family. The app includes a bright and simple interface and easy to use features. Bestow is a React application with a custom built API. To try a demo, use 'demo' for the username and 'demopass' for the password.</p>
+              <p class="pProject">Bestow was created to help keep track of all of the things that you have borrowed or lent to friends or family. The app includes a bright and simple interface and easy to use features. Bestow is a React application with a custom built API. To try a demo, use 'demo' for the username and 'demopass' for the password.</p>
             </div>
           <div class="links">
               <a href="https://bestow-client.herokuapp.com/" target="_blank" class="projectLink">Visit the website</a>
@@ -136,7 +136,7 @@
           <div class="infoBox">
             <div class="description">
               <h3 class="projectTitle">The Game Room</h3>
-              <p class="pProject">The Game Room is a retro styled Blog for video games. Write reviews, share tips and tricks, or just express your love for video games. To try a demo, use 'demo' for the username and 'demopass' for the password.</p>
+              <p class="pProject">The Game Room is a retro styled Blog for video games where you can write reviews, share tips and tricks, or just express your love for video games. To try a demo, use 'demo' for the username and 'demopass' for the password.</p>
             </div>
           <div class="links">
               <a href="https://the-game-room.herokuapp.com/" target="_blank" class="projectLink">Visit the website</a>
@@ -157,7 +157,7 @@
           <div class="infoBox">
             <div class="description">
               <h3 class="projectTitle">SmarterNews</h3>
-              <p class="pProject">SmarterNews is a news app that gives you more. You can view top news stories or search for the news you want to see. It also includes a built in Dictionary and Wikipedia search feature. SmartNews uses newsAPI, wikipedia, and pearson dictionary API's.</p>
+              <p class="pProject">SmarterNews is a news app that gives you more with a built in Dictionary and Wikipedia search feature. You can view top news stories or search for the news you want to see. SmartNews uses newsAPI, wikipedia, and pearson dictionary API's.</p>
             </div>
           <div class="links">
               <a href="https://mrjustinfry.github.io/smarterNews/" target="_blank" class="projectLink">Visit the Website</a>
@@ -176,7 +176,7 @@
           <div class="infoBox">
             <div class="description">
               <h3 class="projectTitle">Super Mario Quiz</h3>
-              <p class="pProject">Just a fun little quiz to test your knowledge of the Super Mario Bros. series. The quiz consists of ten multiple choice questions with different responses based on how well the user answers the questions. There is also a "hidden easter egg". Can you save the princess?</p>
+              <p class="pProject">Just a fun little quiz to test your knowledge of the Super Mario Bros. series. The quiz consists of ten multiple choice questions with different endings based on how well the user answers the questions. There is also a "hidden easter egg". Can you save the princess?</p>
             </div>
           <div class="links">
               <a href="https://mrjustinfry.github.io/super-mario-quiz/" target="_blank" class="projectLink">Visit the website</a>
