--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
 <header>
 <img src="burger.png" alt="menu" class="menu" />
 </header>
-<nav class="dropDown">
-<p><a href="#two" class="navLink">About</a></p> <p><a href="#three" class="navLink">Projects</a></p> <p><a href="#four" class="navLink">Contact</a><img src="burger2.png" alt="menuClose" class="close" /></p>
+<nav class="dropDown" aria-live="polite">
+<p><a href="#two" class="navLink">About</a></p> <p><a href="#three" class="navLink">Projects</a></p> <p><span class="navLink" id="openLink">Contact</span><img src="burger2.png" alt="menuClose" class="close" /></p>
+<div class="navContact">
+<a href="mailto:mrjustinfry@gmail.com" class="navContactLink">Email</a>
+<a href="https://www.linkedin.com/in/mrjustinfry/" class="navContactLink" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+</div>
 </nav>
-<div class="introBox" id="one" data-color="#000000">
+<section class="introBox" id="one" data-color="#000000">
 <h1 class="intro">
   <p><span class="letter">H</span>
   <span class="letter">e</span>
@@ -71,8 +75,8 @@
   <span class="letter">s</span>
   <span class="letter">.</span></p>
   <div class="clear"></div>
-</div>
-<div class="about" id="two" data-color="#ff1bd1">
+</section>
+<section class="about" id="two" data-color="#ff1bd1">
   <h2 class="aboutMe">Get to know a little bit about me</h2>
   <div class="pro">
     <p class="aboutP"><img src="devicesTemplate.png" class="icons  responsive" alt="responsive" /><br/>
@@ -103,8 +107,8 @@
     </p>
   </div>
 </div><div class="clear"></div>
-</div>
-<div class="projects" id="three" data-color="#f5f4f5">
+</section>
+<section class="projects" id="three" data-color="#f5f4f5">
  <h2 class="projectHead">Check out some of my projects</h2>
 
   <div class="projectBox">
@@ -189,7 +193,7 @@
   </div>
 <div class="clear"></div>
 <button id="top">&uarr;</button>
-</div>
+</section>
 <footer class="infoFoot" id="four" data-color="#000000" role="contentinfo">&#169; <span class="me">Mr.JustinFry</span> <span id="year"> </span><br />
 <a href="https://github.com/Mrjustinfry" target="_blank" rel="noopener noreferrer"><img src='github.png' alt='github' class="contact" /></a>
 <a href="mailto:mrjustinfry@gmail.com"><img src='email.png' alt='email' class="contact" /></a>
