--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <a href="https://bestow-client.herokuapp.com/" target="_blank" class="projectLink">Visit the website</a>
               <a href="https://github.com/Mrjustinfry/bestow-client" target="_blank" class="projectLink">Check out the Repo</a>
           </div>
-          <div class="tech">
+          <div class="tech eight">
               <i class="devicon-react-original-wordmark"></i> <i class="devicon-javascript-plain"></i>
               <i class="devicon-html5-plain-wordmark"></i> <i class="devicon-css3-plain-wordmark"></i>
                <i class="devicon-express-original"></i> <i class="devicon-mocha-plain"></i>
@@ -146,7 +146,7 @@
               <a href="https://the-game-room.herokuapp.com/" target="_blank" class="projectLink">Visit the website</a>
               <a href="https://github.com/Mrjustinfry/thegameroom" target="_blank" class="projectLink">Check out the Repo</a>
           </div>
-          <div class="tech">
+          <div class="tech eight">
               <i class="devicon-html5-plain-wordmark"></i> <i class="devicon-css3-plain-wordmark"></i>
                <i class="devicon-javascript-plain"></i> <i class="devicon-jquery-plain-wordmark"></i> <i class="devicon-express-original"></i>
                <i class="devicon-nodejs-plain"></i> <i class="devicon-mocha-plain"></i> <i class="devicon-mongodb-plain-wordmark"></i>
@@ -167,7 +167,7 @@
               <a href="https://mrjustinfry.github.io/smarterNews/" target="_blank" class="projectLink">Visit the Website</a>
               <a href="https://github.com/Mrjustinfry/smarterNews" target="_blank" class="projectLink">Check out the Repo</a>
           </div>
-          <div class="tech">
+          <div class="tech five">
               <i class="devicon-html5-plain-wordmark"></i> <i class="devicon-css3-plain-wordmark"></i> <i class="devicon-javascript-plain"></i> <i class="devicon-jquery-plain-wordmark"></i> <i class="devicon-nodejs-plain"></i>
           </div>
         </div>
@@ -186,7 +186,7 @@
               <a href="https://mrjustinfry.github.io/super-mario-quiz/" target="_blank" class="projectLink">Visit the website</a>
               <a href="https://github.com/Mrjustinfry/super-mario-quiz" target="_blank" class="projectLink">Check out the Repo</a>
           </div>
-          <div class="tech">
+          <div class="tech four">
               <i class="devicon-html5-plain-wordmark"></i> <i class="devicon-css3-plain-wordmark"></i> <i class="devicon-javascript-plain"></i> <i class="devicon-jquery-plain-wordmark"></i>
           </div>
         </div>
