--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <a href="mailto:mrjustinfry@gmail.com" class="navContactLink">Email</a>
 <a href="https://www.linkedin.com/in/mrjustinfry/" class="navContactLink" target="_blank" rel="noopener noreferrer">LinkedIn</a>
 </div>
-</nav>
+</nav><div id="container">
 <section class="introBox" id="one" data-color="#000000">
 <h1 class="intro">
   <p><span class="letter">H</span>
@@ -76,9 +76,9 @@
   </p>
   <div class="clear"></div>
 </section>
-<section class="about" id="two" data-color="#ff1bd1">
+<section class="about" id="two" data-color="#ffb3f0">
   <h2 class="aboutMe">Get to know a little bit about me</h2>
-  <div class="pro">
+  <div class="tiles">
     <p class="aboutP"><img src="devicesTemplate.png" class="icons  responsive" alt="responsive" /><br/>
       I build responsive applications that look great on all devices
     </p>
@@ -91,8 +91,6 @@
     <p class="aboutP"><img src="thunderbolt.png" class="icons fast" alt="fast" /><br/>
       I strive for lightning fast load times and best case run-times
     </p>
-  </div>
-  <div class="per">
     <p class="aboutP"><img src="gamecontroller.png" class="icons games" alt="gamer"/><br/>
       I spend my free time saving princesses and slaying demons
     </p>
@@ -106,7 +104,7 @@
       I'm usually listening to some really great classic rock
     </p>
   </div>
-</div><div class="clear"></div>
+<div class="clear"></div>
 </section>
 <section class="projects" id="three" data-color="#f5f4f5">
  <h2 class="projectHead">Check out some of my projects</h2>
@@ -193,7 +191,7 @@
   </div>
 <div class="clear"></div>
 <button id="top">&uarr;</button>
-</section>
+</section></div>
 <footer class="infoFoot" id="four" data-color="#000000" role="contentinfo">&#169; <span class="me">Mr.JustinFry</span> <span id="year"> </span><br />
 <a href="https://github.com/Mrjustinfry" target="_blank" rel="noopener noreferrer"><img src='github.png' alt='github' class="contact" /></a>
 <a href="mailto:mrjustinfry@gmail.com"><img src='email.png' alt='email' class="contact" /></a>
